[package]
name = "identity_hasher"
version = "0.1.0"
authors = ["Anders Evensen"]
include = ["src/lib.rs", "build.rs"]

[dependencies]
doc_item = {version = "0.2.5", optional = true}
serde = {version = "1.0.125", default-features = false, optional = true}
serde_test = {version = "1.0.125", optional = true}

[dev-dependencies]

[build-dependencies]
autocfg = "1.0.1"
